# ics-event-cli

./: README.md  ics_events.py  pyproject.toml  requirements.txt
