[tool.poetry]
name = "ics-events-cli"
version = "1.0.1"
description = "A CLI tool to extract and display events from an ICS file."
authors = ["Andy Piper <andypiper@omg.lol>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
rich = "^13.7.0"
ics = "^0.7.2"

[tool.poetry.scripts]
ics-events = "ics_events:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

